PCでのカスタマイズ終わり
PCでのカスタマイズ終わり

--- a/less/_mixin.less
+++ b/less/_mixin.less
@@ -1,31 +1,41 @@
-.clearfix {
+.clearfix{
     display: block;
     *zoom: 1;
-  	&:after {
+    &:after{
         display: block;
         visibility: hidden;
         font-size: 0;
         height: 0;
         clear: both;
         content: ".";
-  	}
+    }
 }
 
-.inline-block {
+.inline-block{
     display: inline-block;
     *display: inline;
     *zoom: 1;
 }
 
-.box-shadow (@x: 0, @y: 0, @blur: 25px, @color: rgba(0,0,0,.20)) {
+.box-shadow(@x: 0, @y: 1px, @blur: 5px, @color: rgba(0,0,0,.25)) {
+    -moz-box-shadow: @x @y @blur @color;
+    -webkit-box-shadow: @x @y @blur @color;
+    -o-box-shadow: @x @y @blur @color;
+    -ms-box-shadow: @x @y @blur @color;
     box-shadow: @x @y @blur @color;
 }
 
-.box-shadow-inset (@x: 0, @y: 0, @blur: 25px, @color: rgba(0,0,0,.20)) {
+.box-shadow-inset(@x: 1px, @y: 1px, @blur: 5px, @color: rgba(0,0,0,.25)) {
+    -moz-box-shadow: inset @x @y @blur @color;
+    -webkit-box-shadow: inset @x @y @blur @color;
+    -o-box-shadow: inset @x @y @blur @color;
+    -ms-box-shadow: inset @x @y @blur @color;
     box-shadow: inset @x @y @blur @color;
 }
 
-.text-shadow (@x: 0, @y: 0, @blur: 5px, @color: rgba(0,0,0,.20)) {
+.text-shadow(@x: 0, @y: 0, @blur: 5px, @color: rgba(0,0,0,.25)) {
+    -moz-text-shadow: @x @y @blur @color;
+    -webkit-text-shadow: @x @y @blur @color;
     text-shadow: @x @y @blur @color;
 }
 
@@ -49,7 +59,7 @@
     background: -moz-linear-gradient(top, @start 0%, @stop 100%);
 }
 
-.ellipsis {
+.ellipsis{
     white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
@@ -63,14 +73,28 @@
     transition-duration: @duration;
 }
 
-.rotation(@deg:5deg){
+.rotation(@deg:5deg) {
     transform: rotate(@deg);
 }
 
-.scale(@ratio:1.5){
+.scale(@ratio:1.5) {
     transform:scale(@ratio);
 }
 
 .translate(@x:0, @y:0) {
     transform: translate(@x, @y);
+}
+
+/**
+* Font Awesome
+*/
+.fontawesome(@icon, @right:2px) {
+    font-family: "FontAwesome";
+    content: @icon;
+    padding-right: @right;
+}
+.fontawesome-after(@icon, @left:4px) {
+    font-family: "FontAwesome";
+    content: @icon;
+    padding-left: @left;
 }
