--- a/less/_media-queries.less
+++ b/less/_media-queries.less
@@ -1,89 +1,65 @@
-/* Media Queries - Retina Display */
-
-@media (-webkit-min-device-pixel-ratio: 2) {
-    .hatena-module-search-box .search-module-button {
+/**
+* Media Queries - Retina Display
+*/
+@media (-webkit-min-device-pixel-ratio: 2){
+    .hatena-module-search-box .search-module-button{
         background: transparent url(http://blog.hatena.ne.jp/images/theme/search@2x.png) no-repeat right center;
         background-size: 20px 20px;
     }
 }
 
-/* Media Queries - Tablet */
-
-@media (min-width: 768px) and (max-width: 1024px) {
-
-    #container {
+/**
+* Media Queries - Tablet
+*/
+@media (min-width: 768px) and (max-width: 1024px){
+    #container{
         width: 724px;
     }
-
-    #main {
+    #wrapper{
         width: 460px;
     }
-
-    #box2 {
+    #box2{
         width: 245px;
     }
-
-/* 1カラムにしたい場合は下記のコメントアウトを外してください ----
-    #main,
-    #box2 {
-        width: 100%;
-    }
-
-    #box2-inner {
-        width: 744px;
-
-    }
-
-    .hatena-module {
-        width: 228px;
-    }
----- END 1カラム */
-
 }
 
-/* Media Queries - Small Tablet & Smartphone */
-
-@media (max-width: 767px) {
-
-    #globalheader-container {
+/**
+* Media Queries - Small Tablet & Smartphone
+*/
+@media (max-width: 767px){
+    #globalheader-container{
         position: static;
     }
-
-    #container {
+    #container{
         width: 93.75%;
         word-wrap: break-word;
         overflow: hidden;
         padding-top: 0;
+        #content{background-color: @bg-container}
     }
-
-    #main {
+    #main{
         width: 100%;
         float: none;
     }
-
-    #box2 {
+    #box2{
         width: 100%;
         float: none;
     }
-
-    #box2-inner {
+    #box2-inner{
         width: 100%;
     }
-
-    .hatena-module {
+    .hatena-module{
         width: 100%;
         float: none;
     }
-
-    .entry-header-menu {
+    .entry-header-menu{
         top: -30px;
         left: 0px;
     }
-
 }
 
-/* Media Queries - Smartphone */
-
-@media (max-width: 480px) {
-
+/**
+* Media Queries - Smartphone
+*/
+@media (max-width: 480px){
 }
