--- a/less/_variable.less
+++ b/less/_variable.less
@@ -1,17 +1,29 @@
 // LESS Variables
 
-@background: #fff; // Background color
+@bg-body: #b7a887; // Background color
+@bg-content: #fff;
 @bg-light: #f5f5f5; // Background color
+@bg-tag: #f0f0f0;
 
-@text: #454545; // Base text color
+@text: #555; // Base text color
 @text-light: #999; // Light text color
 @text-header: #333; // h1~h6 text color
+
+@title: #b7a887; // Entry Title Color
+@title-hover: #b7a887;
+@date: #808080;
 
 @link: #1487bd; // Link text color
 @hover: #0f5373; // Link text color(hover)
 @visited: #789dae; // Link text color(hover)
 
 @border: #ddd; // Border color
+@border-container: #826f46;
 
 @btn: #fff; // button background
 @btn-hover: #f5f5f5; // button hover backgroud
+
+/**
+* Sidebar Module Colors
+*/
+@module-header: #b7a887; // Header Background
