--- a/style.less
+++ b/style.less
@@ -197,7 +197,7 @@ a.keyword{
 * パンくず（カテゴリーページで表示されます）
 */
 #top-box{
-    margin: 10px auto 20px;
+    margin: 16px auto 16px;
     font-size: 90%;
 }
 
@@ -231,7 +231,7 @@ a.keyword{
 }
 .entry-header{
     position: relative;
-    margin-bottom: 20px;
+    margin-bottom: 16px;
 }
 .entry-title{
     margin: 0;
@@ -251,8 +251,8 @@ a.keyword{
 .date{
     font-size: 16px;
     font-weight: bold;
-    margin-bottom: 15px;
-    padding-bottom: 5px;
+    margin-bottom: 16px;
+    padding-bottom: 8px;
     border-bottom: 1px solid @border;
     a{
         color: @date;
@@ -267,7 +267,7 @@ a.keyword{
 * カテゴリ
 */
 .categories{
-    margin-top: 10px;
+    margin-top: 8px;
     font-size: 14px;
     a{
         margin-right: 4px;
@@ -703,15 +703,22 @@ ul.table-of-contents{
 .pager{
     margin: 1em 0;
     .clearfix;
+    .pager-arrow{display: none}
     .pager-prev{
         float: left;
         text-align: left;
         width: 45%;
+        a:before{
+            .fontawesome(@fa-var-arrow-left);
+        }
     }
     .pager-next{
         float: right;
         text-align: right;
         width: 45%;
+        a:after{
+            .fontawesome-after(@fa-var-arrow-right);
+        }
     }
 }
 
@@ -810,4 +817,4 @@ ul.table-of-contents{
 /**
 * Import Media Queries
 */
-// @import "less/_media-queries.less";
+@import "less/_media-queries.less";
