全体的に横幅の拡充。 minファイル作成。

--- a/style.css
+++ b/style.css
@@ -534,7 +534,7 @@ a.keyword {
 * Container
 */
 #container {
-  width: 810px;
+  width: 900px;
   margin: 0 auto;
   padding: 0 30px;
   background-color: #fff;
@@ -567,11 +567,11 @@ a.keyword {
 * 2カラムレイアウト
 */
 #wrapper {
-  width: 560px;
+  width: 630px;
   float: left;
 }
 #box2 {
-  width: 220px;
+  width: 240px;
   float: right;
   font-size: 14px;
   word-wrap: break-word;
@@ -1055,8 +1055,8 @@ ul.table-of-contents:before {
   margin-bottom: 5px;
 }
 .hatena-module-profile .profile-activities {
-  margin-top: .3em;
-  margin-bottom: .3em;
+  margin-top: 0.3em;
+  margin-bottom: 0.3em;
   font-style: italic;
   font-size: 90%;
   opacity: 0.7;
@@ -1257,7 +1257,7 @@ ul.table-of-contents:before {
   color: #b7a887;
 }
 .page-archive .archive-entries .categories {
-  margin: 0 0 .5em;
+  margin: 0 0 0.5em;
 }
 .page-archive .archive-entries .entry-description {
   margin: 0 0 1em;
@@ -1417,7 +1417,7 @@ ul.table-of-contents:before {
   }
   .archive-entry .entry-content p,
   .entry .entry-content p {
-    margin: 0 0 .5em 0;
+    margin: 0 0 0.5em 0;
   }
   .archive-entry .entry-content a.entry-see-more,
   .entry .entry-content a.entry-see-more {
