不要ファイルの削除。 サイドバー内プロフィールのスタイルの調整。

--- a/style.less
+++ b/style.less
@@ -587,6 +587,8 @@ ul.table-of-contents {
 * Profile module
 */
 .hatena-module-profile {
+    margin-bottom: 4px;
+
     .profile-icon {
         margin-bottom: 5px
     }
@@ -604,10 +606,21 @@ ul.table-of-contents {
     .profile-description {
         font-size: 90%;
         p {
-            margin-top: 0;
+            margin: 0;
         }
     }
+    .profile-links {
+        font-size: auto;
 
+        a {
+            display: inline-block;
+            margin-bottom: 4px;
+            font-size: 1em;
+        }
+    }
+    .hatena-follow-button-box {
+        margin: 16px 0;
+    }
 }
 
 /**
