プロフィール欄のデザイン調整

--- a/style.less
+++ b/style.less
@@ -604,22 +604,18 @@ ul.table-of-contents {
         opacity: .7
     }
     .profile-description {
-        font-size: 90%;
-        p {
-            margin: 0;
-        }
     }
     .profile-links {
-        font-size: auto;
-
+        margin-top: 15px;
+        padding-top: 15px;
+        border-top: dotted 3px #b7a887;
         a {
             display: inline-block;
             margin-bottom: 4px;
-            font-size: 1em;
         }
     }
     .hatena-follow-button-box {
-        margin: 16px 0;
+        margin: 10px 0;
     }
 }
 
