スタイル不具合の修正

--- a/style.less
+++ b/style.less
@@ -652,7 +652,7 @@ ul.table-of-contents {
 /**
 * 関連記事
 */
-.hatena-module-related-entries {
+#box2 .hatena-module-related-entries {
     .hatena-module-title:before {
         font-family: FontAwesome;
         content: "\f304";
