コメント書式変更

--- a/less/_mixin.less
+++ b/less/_mixin.less
@@ -85,9 +85,9 @@
     transform: translate(@x, @y);
 }
 
-/**
-* Font Awesome
-*/
+// -------------------------
+// Font Awesome
+// -------------------------
 .fontawesome(@icon, @right:2px) {
     font-family: "Font Awesome 6 Free";
     content: @icon;
