--- a/less/_variable.less
+++ b/less/_variable.less
@@ -23,7 +23,5 @@
 @btn: #fff; // button background
 @btn-hover: #f5f5f5; // button hover backgroud
 
-/**
-* Sidebar Module Colors
-*/
+// Sidebar Module Colors
 @module-header: #b7a887; // Header Background
