一部アイコンが表示されていなかったのを修正 見出しのスタイル調整

--- a/less/_variable.less
+++ b/less/_variable.less
@@ -9,9 +9,11 @@
 @text-light: #999; // Light text color
 @text-header: #333; // h1~h6 text color
 
-@title: #b7a887; // Entry Title Color
-@title-hover: #b7a887;
+@title: #9b875e; // Entry Title Color
+@title-hover: #9b875e;
 @date: #808080;
+
+@title2: #7b683f;
 
 @link: #1487bd; // Link text color
 @hover: #0f5373; // Link text color(hover)
