--- a/less/_mixin.less
+++ b/less/_mixin.less
@@ -89,12 +89,12 @@
 // Font Awesome
 // -------------------------
 .fontawesome(@icon, @right:2px) {
-    font-family: "Font Awesome 6 Free";
+    font-family: "FontAwesome", "Font Awesome 6 Free";
     content: @icon;
     padding-right: @right;
 }
 .fontawesome-after(@icon, @left:4px) {
-    font-family: "Font Awesome 6 Free";
+    font-family: "FontAwesome", "Font Awesome 6 Free";
     content: @icon;
     padding-left: @left;
 }
