--- a/less/_variable.less
+++ b/less/_variable.less
@@ -4,6 +4,7 @@
 @bg-content: #fff;
 @bg-light: #f5f5f5; // Background color
 @bg-tag: #f0f0f0;
+@bg-title2: #f4efe2;
 
 @text: #555; // Base text color
 @text-light: #999; // Light text color
