--- a/style.less
+++ b/style.less
@@ -346,7 +346,7 @@ a.keyword {
     h2 {
         font-size: 140%;
         color: @title2;
-        background-color: rgb(183 168 135 / 25%);
+        background-color: @bg-title2;
     }
     h4 {
         border-bottom: none;
